fix: hid scrollbar

--- a/app/components/Embeds/Embeds.module.css
+++ b/app/components/Embeds/Embeds.module.css
@@ -10,6 +10,12 @@
 	scroll-snap-type: x mandatory;
 	scroll-behavior: smooth;
 	gap: var(--spacing-04);
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none;  /* IE and Edge */
+}
+
+.embedContainer::-webkit-scrollbar {
+	display: none; /* Chrome, Safari, Opera */
 }
 
 .embedItem {
